<resources>
    <string name="app_name">Proyecto</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">5 Stars Reviews</string>
    <string name="nav_header_subtitle">Proyecto Progra Móvil</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_restaurante">Restaurantes</string>
    <string name="menu_reservas">Mis Reservas</string>
    <string name="menu_ic_hotel">Hoteles</string>
    <string name="menu_home">Home</string>

    <string name="msg_nombre">Nombre del restaurante</string>
    <string name="msg_localizacion">Provincia, Cantón</string>
    <string name="msg_imagen">Imagen del Restaurante</string>
    <string name="msg_telefono">Teléfono</string>
    <string name="msg_cocina">Tipo de Cocina</string>
    <string name="bt_agregar">Agregar</string>
    <string name="bt_reservar">Reservar</string>
    <string name="msg_restaurante_added">Restaurante agregado</string>
    <string name="msg_restaurante_updated">Restaurante actualizado</string>
    <string name="msg_reserva_added">Reserva registrada</string>
    <string name="msg_reserva_updated">Reserva actualizado</string>
    <string name="msg_data">Faltan datos!!</string>
    <string name="msg_nocreador">No eres el creador!!</string>
    <string name="fb_agregar">Agregar Lista</string>
    <string name="menu_delete">Restaurante</string>

    <string name="bt_update">Actualizar</string>
    <string name="deleted">Eliminado</string>
    <string name="si">SÍ</string>
    <string name="no">NO</string>
    <string name="seguroBorrar">¿Deseas borrar </string>
    <string name="msg_precio">Precio x noche</string>
    <string name="msg_Precio">Precio</string>
    <string name="msg_NombreH">Nombre del Hotel</string>
    <string name="menu_hotel">Hoteles</string>
    <string name="msg_hotel_added">Hotel agregado</string>
    <string name="msg_hotel_updated">Hotel actualizado</string>
    <string name="msg_lugar">Lugar</string>
    <string name="msg_fecha">Fecha</string>
    <string name="msg_dias">Días</string>
    <string name="msg_total">Total</string>
</resources>