<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_restaurante"
            android:icon="@drawable/ic_food"
            android:title="@string/menu_restaurante" />
        <item
            android:id="@+id/nav_hotel"
            android:icon="@drawable/ic_hotel"
            android:title="@string/menu_ic_hotel" />
        <item
            android:id="@+id/nav_reserva"
            android:icon="@drawable/ic_menu_reservas"
            android:title="@string/menu_reservas" />
    </group>
</menu>