<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00B53F3F"
    android:backgroundTint="#3F51B5"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.reserva.AddReservaFragment">

    <EditText
        android:id="@+id/et_lugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_lugar"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_fecha"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_dias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_dias"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_total"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/bt_agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:text="@string/bt_reservar"
        app:iconTint="#3F51B5" />
</LinearLayout>