<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00B53F3F"
    android:backgroundTint="#3F51B5"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.hotel.AddHotelFragment">

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_NombreH"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_localizacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_localizacion"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_precio"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_telefono"
        android:inputType="phone"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/bt_agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:text="@string/bt_agregar"
        app:iconTint="#3F51B5" />
</LinearLayout>