<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.hotel.UpdateHotelFragment">

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_NombreH"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_localizacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_localizacion"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_Precio"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_telefono"
        android:inputType="phone"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/bt_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:text="@string/bt_update"
        android:textColor="#FFFFFF"
        app:iconTint="#2196F3" />

    <LinearLayout
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_fecha"
            android:layout_width="158dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="DD/MM/YYYY"
            android:inputType="datetime" />

        <EditText
            android:id="@+id/et_dias"
            android:layout_width="75dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="Días"
            android:inputType="number" />

        <Button
            android:id="@+id/bt_reservar"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#E91E63"
            android:text="@string/bt_reservar"
            android:textColor="#FFFFFF"
            app:iconTint="#2196F9" />

    </LinearLayout>

</LinearLayout>