<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyecto.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_restaurante"
        android:name="com.example.proyecto.ui.restaurante.RestauranteFragment"
        android:label="@string/menu_restaurante"
        tools:layout="@layout/fragment_restaurante" >
        <action
            android:id="@+id/action_nav_restaurante_to_addRestauranteFragment"
            app:destination="@id/addRestauranteFragment" />
        <action
            android:id="@+id/action_nav_restaurante_to_updateRestauranteFragment"
            app:destination="@id/updateRestauranteFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_hotel"
        android:name="com.example.proyecto.ui.hotel.HotelFragment"
        android:label="@string/menu_hotel"
        tools:layout="@layout/fragment_hotel" >
        <action
            android:id="@+id/action_nav_hotel_to_addHotelFragment"
            app:destination="@id/addHotelFragment" />
        <action
            android:id="@+id/action_nav_hotel_to_updateHotelFragment"
            app:destination="@id/updateHotelFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.proyecto.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addHotelFragment"
        android:name="com.example.proyecto.ui.hotel.AddHotelFragment"
        android:label="fragment_add_hotel"
        tools:layout="@layout/fragment_add_hotel" >
        <action
            android:id="@+id/action_addHotelFragment_to_nav_hotel"
            app:destination="@id/nav_hotel" />
    </fragment>
    <fragment
        android:id="@+id/updateHotelFragment"
        android:name="com.example.proyecto.ui.hotel.UpdateHotelFragment"
        android:label="fragment_update_hotel"
        tools:layout="@layout/fragment_update_hotel" >
        <action
            android:id="@+id/action_updateHotelFragment_to_nav_hotel"
            app:destination="@id/nav_hotel" />
        <argument android:name="hotel"
            app:argType="com.example.proyecto.model.Hotel"/>
    </fragment>
    <fragment
        android:id="@+id/addRestauranteFragment"
        android:name="com.example.proyecto.ui.restaurante.AddRestauranteFragment"
        android:label="fragment_add_restaurante"
        tools:layout="@layout/fragment_add_restaurante" >
        <action
            android:id="@+id/action_addRestauranteFragment_to_nav_restaurante"
            app:destination="@id/nav_restaurante" />
    </fragment>
    <fragment
        android:id="@+id/updateRestauranteFragment"
        android:name="com.example.proyecto.ui.restaurante.UpdateRestauranteFragment"
        android:label="fragment_update_restaurante"
        tools:layout="@layout/fragment_update_restaurante" >
        <action
            android:id="@+id/action_updateRestauranteFragment_to_nav_restaurante"
            app:destination="@id/nav_restaurante" />
        <argument android:name="restaurante"
            app:argType="com.example.proyecto.model.Restaurante"/>
    </fragment>
</navigation>